--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "devDependencies": {
     "all-contributors-cli": "^5.4.1",
     "babel-eslint": "^7.2.3",
+    "codecov": "3.6.x",
+    "coveralls": "3.0.x",
     "css-loader": "^0.28.9",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -47,9 +49,7 @@
     "nwb": "0.21.x",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "style-loader": "^0.19.1",
-    "codecov": "3.6.x",
-    "coveralls": "3.0.x"
+    "style-loader": "^0.19.1"
   },
   "author": {
     "name": "Martin Beierling",
